Implemented PS-7013 (Merge MySQL 5.7.31) (docs)
https://jira.percona.com/browse/PS-7013
***
Updated man pages from MySQL Server 5.7.31 source tarball.
***
Updated 'scripts/fill_help_tables.sql' from MySQL Server 5.7.31 source tarball.

--- a/man/ndb_import.1
+++ b/man/ndb_import.1
@@ -2,12 +2,12 @@
 .\"     Title: \fBndb_import\fR
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
-.\"      Date: 03/23/2020
+.\"      Date: 06/02/2020
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.7
 .\"  Language: English
 .\"
-.TH "\FBNDB_IMPORT\FR" "1" "03/23/2020" "MySQL 5\&.7" "MySQL Database System"
+.TH "\FBNDB_IMPORT\FR" "1" "06/02/2020" "MySQL 5\&.7" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -650,27 +650,27 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --abort-on-error
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Boolean
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 FALSE
 T}
@@ -697,39 +697,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --ai-increment=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 1
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 1
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -758,39 +758,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --ai-offset=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 1
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 1
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -819,39 +819,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --ai-prefetch-sz=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 1024
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 1
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -880,39 +880,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --connections=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 1
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 1
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -939,27 +939,27 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --continue
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Boolean
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 FALSE
 T}
@@ -986,45 +986,45 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --db-workers=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR (≥ 5.7.20-ndb-7.6.4)
+Default Value (≥ 5.7.20-ndb-7.6.4)
 T}:T{
 4
 T}
 T{
-\fBDefault Value\fR (≥ 5.7.18-ndb-7.6.2, ≤ 5.7.18-ndb-7.6.3)
+Default Value (≥ 5.7.18-ndb-7.6.2, ≤ 5.7.18-ndb-7.6.3)
 T}:T{
 1
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 1
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -1051,33 +1051,33 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --errins-type=name
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Enumeration
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 [none]
 T}
 T{
-\fBValid Values\fR
+Valid Values
 T}:T{
 .PP
 stopjob
@@ -1117,39 +1117,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --errins-delay=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 1000
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 0
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -1176,27 +1176,27 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --fields-enclosed-by=char
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 String
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 [none]
 T}
@@ -1228,27 +1228,27 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --fields-escaped-by=name
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 String
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 \
 T}
@@ -1279,27 +1279,27 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --fields-optionally-enclosed-by=char
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 String
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 [none]
 T}
@@ -1331,27 +1331,27 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --fields-terminated-by=char
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 String
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 \t
 T}
@@ -1382,39 +1382,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --idlesleep=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 1
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 1
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -1441,39 +1441,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --idlespin=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 0
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 0
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -1500,39 +1500,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --ignore-lines=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 0
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 0
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -1561,33 +1561,33 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --input-type=name
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Enumeration
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 csv
 T}
 T{
-\fBValid Values\fR
+Valid Values
 T}:T{
 .PP
 random
@@ -1620,45 +1620,45 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --input-workers=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR (≥ 5.7.20-ndb-7.6.4)
+Default Value (≥ 5.7.20-ndb-7.6.4)
 T}:T{
 4
 T}
 T{
-\fBDefault Value\fR (≥ 5.7.18-ndb-7.6.2, ≤ 5.7.18-ndb-7.6.3)
+Default Value (≥ 5.7.18-ndb-7.6.2, ≤ 5.7.18-ndb-7.6.3)
 T}:T{
 2
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 1
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -1685,27 +1685,27 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --keep-state
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.20-ndb-7.6.4
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Boolean
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 false
 T}
@@ -1734,27 +1734,27 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --lines-terminated-by=name
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 String
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 \n
 T}
@@ -1785,33 +1785,33 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --log-level=#
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 0
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 0
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 2
 T}
@@ -1840,39 +1840,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --max-rows=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 0
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 0
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -1899,39 +1899,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --monitor=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 2
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 0
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -1958,27 +1958,27 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --no-asynch
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Boolean
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 FALSE
 T}
@@ -2005,27 +2005,27 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --no-hint
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Boolean
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 FALSE
 T}
@@ -2052,39 +2052,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --opbatch=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 256
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 1
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -2111,39 +2111,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --opbytes=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 0
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 0
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -2170,33 +2170,33 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --output-type=name
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Enumeration
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 ndb
 T}
 T{
-\fBValid Values\fR
+Valid Values
 T}:T{
 null
 T}
@@ -2227,39 +2227,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --output-workers=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 2
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 1
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -2286,39 +2286,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --pagesize=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 4096
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 1
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -2345,39 +2345,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --pagecnt=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 64
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 1
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -2404,39 +2404,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --polltimeout=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 1000
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 1
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -2463,39 +2463,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --rejects=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 0
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 0
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -2530,27 +2530,27 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --resume
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Boolean
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 FALSE
 T}
@@ -2577,39 +2577,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --rowbatch=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 0
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 0
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -2636,39 +2636,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --rowbytes=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 262144
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 0
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -2695,27 +2695,27 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --stats
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.20-ndb-7.6.4
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Boolean
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 false
 T}
@@ -2747,27 +2747,27 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --state-dir=name
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 String
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 .
 T}
@@ -2797,39 +2797,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --tempdelay=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 10
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 0
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -2856,39 +2856,39 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --temperrors=#
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 0
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 0
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 4294967295
 T}
@@ -2918,51 +2918,51 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --verbose
 T}
 T{
-\fBIntroduced\fR
+Introduced
 T}:T{
 5.7.18-ndb-7.6.2
 T}
 T{
-\fBType\fR (≥ 5.7.20-ndb-7.6.4)
+Type (≥ 5.7.20-ndb-7.6.4)
 T}:T{
 Boolean
 T}
 T{
-\fBType\fR (≥ 5.7.18-ndb-7.6.2, ≤ 5.7.18-ndb-7.6.3)
+Type (≥ 5.7.18-ndb-7.6.2, ≤ 5.7.18-ndb-7.6.3)
 T}:T{
 Integer
 T}
 T{
-\fBDefault Value\fR (≥ 5.7.20-ndb-7.6.4)
+Default Value (≥ 5.7.20-ndb-7.6.4)
 T}:T{
 false
 T}
 T{
-\fBDefault Value\fR (≥ 5.7.18-ndb-7.6.2, ≤ 5.7.18-ndb-7.6.3)
+Default Value (≥ 5.7.18-ndb-7.6.2, ≤ 5.7.18-ndb-7.6.3)
 T}:T{
 0
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 0
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 2
 T}
@@ -2988,7 +2988,7 @@ was added in NDB 7\&.6\&.2\&.
 .SH "COPYRIGHT"
 .br
 .PP
-Copyright \(co 1997, 2020, Oracle and/or its affiliates. All rights reserved.
+Copyright \(co 1997, 2020, Oracle and/or its affiliates.
 .PP
 This documentation is free software; you can redistribute it and/or modify it only under the terms of the GNU General Public License as published by the Free Software Foundation; version 2 of the License.
 .PP
