--- a/man/ndb_desc.1
+++ b/man/ndb_desc.1
@@ -2,12 +2,12 @@
 .\"     Title: \fBndb_desc\fR
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
-.\"      Date: 03/23/2020
+.\"      Date: 06/02/2020
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.7
 .\"  Language: English
 .\"
-.TH "\FBNDB_DESC\FR" "1" "03/23/2020" "MySQL 5\&.7" "MySQL Database System"
+.TH "\FBNDB_DESC\FR" "1" "06/02/2020" "MySQL 5\&.7" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -327,7 +327,7 @@ NDBT_ProgramExit: 0 \- OK
 .\}
 .PP
 For more information about these table properties, see
-Section\ \&13.1.18.10, \(lqSetting NDB_TABLE Options\(rq\&.
+Section\ \&13.1.18.9, \(lqSetting NDB_TABLE Options\(rq\&.
 .PP
 The
 Extent_space
@@ -751,7 +751,7 @@ In NDB 7\&.5\&.3 and later, table indexes listed in the output are ordered by ID
 .SH "COPYRIGHT"
 .br
 .PP
-Copyright \(co 1997, 2020, Oracle and/or its affiliates. All rights reserved.
+Copyright \(co 1997, 2020, Oracle and/or its affiliates.
 .PP
 This documentation is free software; you can redistribute it and/or modify it only under the terms of the GNU General Public License as published by the Free Software Foundation; version 2 of the License.
 .PP
